--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,16 @@ server.port=8090
 spring.data.mongodb.database=auction_system
 spring.data.mongodb.host=172.17.0.2
 spring.data.mongodb.port=27017
+
+#Jwt
+jwt.header=Authorization
+jwt.param=token
+jwt.secret=m6sXDUKZSY154e9N
+jwt.expiration=604800000
+jwt.prefix=Bearer
+jwt.route.authentication.path=auth
+jwt.route.authentication.token=token
+jwt.route.authentication.refresh=refresh
+
+#Log
+logging.level.pl.edu.pw.ee.rutynar.auctionsystem=debug
