New dependencies with Actuator and config file for Prometheus used for monitoring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ jwt.route.authentication.refresh=refresh
 
 #Log
 logging.level.pl.edu.pw.ee.rutynar.auctionsystem=debug
+
+#Actuator
+management.endpoints.web.exposure.include=*
